update corona slider

--- a/corona.html
+++ b/corona.html
@@ -92,7 +92,7 @@
             </div>
             <div class="content">
                 <div class="cards">
-                    <div style="display: none;" class="card">
+                    <div style="display: none; visibility: hidden; transform: translateX(-30%);" class="card">
                         <h5>معرفی</h5>
                         <h3>کروناویروس</h3>
                         <div class="virus-picture">
@@ -120,7 +120,7 @@
                             مطالعه
                         </a>
                     </div>
-                    <div style="display: none;" class="card">
+                    <div style="display: none; visibility: hidden; transform: translateX(-30%);" class="card">
                         <h5>معرفی</h5>
                         <h3>کروناویروس</h3>
                         <div class="virus-picture">
@@ -136,10 +136,10 @@
                     </div>
                 </div>
                 <div class="slider-btn">
-                    <div class="btn">
+                    <div class="btn next-btn">
                         <i class="icon-arrow"></i>
                     </div>
-                    <div class="btn">
+                    <div class="btn prev-btn">
                         <i class="icon-arrow"></i>
                     </div>
                 </div>
@@ -153,7 +153,6 @@
     </section>
 </main>
 <script src="assets/js/app.js"></script>
-<script src="assets/js/post.js"></script>
-<script src="assets/js/snackbar.js"></script>
+<script src="assets/js/cards.js"></script>
 </body>
 </html>
