covido test config

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>کویدو | سلامتی و اطلاع رسانی</title>
-    <link href="assets/css/style1.css" rel="stylesheet"/>
+    <link href="assets/css/articles.css" rel="stylesheet"/>
     <script src="assets/js/nprogress.js"></script>
 </head>
 <body>
@@ -84,43 +84,94 @@
 </header>
 
 <main>
-    <section class="home-container">
+    <section class="articles-container">
         <div class="container">
-            <div class="row banner-container" onclick="window.location='https://URL';">
-                <div class="content">
-                    <h2>سویه جدید آمیکرون</h2>
-                    <p>این سویه چه ویژگی هایی دارد؟</p>
-                </div>
-
-                <span><a href="/">مطالعه</a></span>
+            <div class="title-bar">
+                <span><a href="/">بازگشت</a></span>
+                <h2>مقالات</h2>
             </div>
-            <div class="row cards-container">
-                <div class="card">
-                    <div>
-                        <img src="assets/image/cards/virus.svg"/>
-                        <h3>خانواده کرونا ویروس ها</h3>
+            <div class="top-article">
+                <div class="container">
+                    <img src="/assets/image/virus.jpg" loading="lazy"/>
+                    <div class="content">
+                        <div class="line"></div>
+                        <h1>
+                            <a href="/">
+                                شناسایی
+                            </br>
+                                گونه جدید کرونا
+                            </a>
+                        </h1>
                     </div>
                 </div>
-                <div class="cards">
-                    <div class="card" style="margin-left: 4px;">
-                        <div>
-                            <img src="assets/image/cards/articles.svg"/>
-                            <h3>مقالات</h3>
+            </div>
+            <div class="articles">
+                <article class="article">
+                    <div class="cover">
+                        <img src="/assets/image/virus.jpg"/>
+                    </div>
+                    <div class="content">
+                        <h3>
+                            <a href="#">عنوان مقاله ای در کویدو</a>
+                        </h3>
+                        <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
+                    </div>
+                    <div class="footer">
+                        <div class="author">
+                            <img src="/assets/image/author.png" alt="author"/>
+                            <h4>کویدو</h4>
                         </div>
+                        <p>
+                            <a href="/">
+                                خبر
+                            </a>
+                        </p>
                     </div>
-                    <div class="card" style="margin-right: 4px;">
-                        <div>
-                            <img src="assets/image/cards/test.svg"/>
-                            <h3>تست </h3>
+                </article>
+                <article class="article">
+                    <div class="cover">
+                        <img src="/assets/image/virus.jpg"/>
+                    </div>
+                    <div class="content">
+                        <h3>
+                            <a href="#">عنوان مقاله ای در کویدو</a>
+                        </h3>
+                        <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
+                    </div>
+                    <div class="footer">
+                        <div class="author">
+                            <img src="/assets/image/author.png" alt="author"/>
+                            <h4>کویدو</h4>
                         </div>
+                        <p>
+                            <a href="/">
+                                خبر
+                            </a>
+                        </p>
                     </div>
-                </div>
-                <div class="card">
-                    <div>
-                        <img src="assets/image/cards/chart.svg"/>
-                        <h3>گزارشات و آمار</h3>
+                </article>
+                <article class="article">
+                    <div class="cover">
+                        <img src="/assets/image/virus.jpg"/>
                     </div>
-                </div>
+                    <div class="content">
+                        <h3>
+                            <a href="#">عنوان مقاله ای در کویدو</a>
+                        </h3>
+                        <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
+                    </div>
+                    <div class="footer">
+                        <div class="author">
+                            <img src="/assets/image/author.png" alt="author"/>
+                            <h4>کویدو</h4>
+                        </div>
+                        <p>
+                            <a href="/">
+                                خبر
+                            </a>
+                        </p>
+                    </div>
+                </article>
             </div>
         </div>
     </section>
