#1st test update

--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>کویدو | سلامتی و اطلاع رسانی</title>
-    <link href="assets/css/articles.css" rel="stylesheet"/>
+    <link href="assets/css/test.css" rel="stylesheet"/>
     <script src="assets/js/nprogress.js"></script>
 </head>
 <body>
@@ -13,14 +13,6 @@
 <script>
     NProgress.start();
 </script>
-
-<div class="splash-screen">
-    <img src="./assets/image/splash-icon.svg"/>
-    <p>
-        شکیبا باشید
-    </p>
-</div>
-
 <header class="main-header">
     <nav class="top-nav">
 
@@ -82,96 +74,15 @@
 
     </nav>
 </header>
-
 <main>
-    <section class="articles-container">
+    <section class="test-container">
         <div class="container">
             <div class="title-bar">
                 <span><a href="/">بازگشت</a></span>
                 <h2>مقالات</h2>
             </div>
-            <div class="top-article">
-                <div class="container">
-                    <img src="/assets/image/virus.jpg" loading="lazy"/>
-                    <div class="content">
-                        <div class="line"></div>
-                        <h1>
-                            <a href="/">
-                                شناسایی
-                            </br>
-                                گونه جدید کرونا
-                            </a>
-                        </h1>
-                    </div>
-                </div>
-            </div>
-            <div class="articles">
-                <article class="article">
-                    <div class="cover">
-                        <img src="/assets/image/virus.jpg"/>
-                    </div>
-                    <div class="content">
-                        <h3>
-                            <a href="#">عنوان مقاله ای در کویدو</a>
-                        </h3>
-                        <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
-                    </div>
-                    <div class="footer">
-                        <div class="author">
-                            <img src="/assets/image/author.png" alt="author"/>
-                            <h4>کویدو</h4>
-                        </div>
-                        <p>
-                            <a href="/">
-                                خبر
-                            </a>
-                        </p>
-                    </div>
-                </article>
-                <article class="article">
-                    <div class="cover">
-                        <img src="/assets/image/virus.jpg"/>
-                    </div>
-                    <div class="content">
-                        <h3>
-                            <a href="#">عنوان مقاله ای در کویدو</a>
-                        </h3>
-                        <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
-                    </div>
-                    <div class="footer">
-                        <div class="author">
-                            <img src="/assets/image/author.png" alt="author"/>
-                            <h4>کویدو</h4>
-                        </div>
-                        <p>
-                            <a href="/">
-                                خبر
-                            </a>
-                        </p>
-                    </div>
-                </article>
-                <article class="article">
-                    <div class="cover">
-                        <img src="/assets/image/virus.jpg"/>
-                    </div>
-                    <div class="content">
-                        <h3>
-                            <a href="#">عنوان مقاله ای در کویدو</a>
-                        </h3>
-                        <p>متن متن متن متن متن متن متن متن متن متن متن متن متن متن متن ...</p>
-                    </div>
-                    <div class="footer">
-                        <div class="author">
-                            <img src="/assets/image/author.png" alt="author"/>
-                            <h4>کویدو</h4>
-                        </div>
-                        <p>
-                            <a href="/">
-                                خبر
-                            </a>
-                        </p>
-                    </div>
-                </article>
+            <div class="content">
+                
             </div>
         </div>
     </section>
