#2nd test update

--- a/test.html
+++ b/test.html
@@ -79,10 +79,17 @@
         <div class="container">
             <div class="title-bar">
                 <span><a href="/">بازگشت</a></span>
-                <h2>مقالات</h2>
+                <h2>تست آزمایشی</h2>
             </div>
-            <div class="content">
-                
+            <div class="main-content">
+                <div class="container">
+                    <img src="/assets/image/img-covido-test.svg" alt="Covido Corona Test"/>
+                    <h1>تست آزمایشی کرونا</h1>
+                    <p>این تست به هیچ عنوان جایگزین آزمایش تشخیصی کرونا </br> نیست. هدف این تست غربالگری و کمک به تخمین احتمال </br> ابتلا به کروناست.</p>
+                    <a href="javascript:void">
+                        شروع تست آزمایشی
+                    </a>
+                </div>
             </div>
         </div>
     </section>
