add jquery and pjax to index.html

--- a/index.html
+++ b/index.html
@@ -135,9 +135,14 @@
         </section>
     </main>
 
-    <script src="js/app.js"></script>
-    <script src="js/nprogress.js"></script>
-    <script src="js/components/header.js"></script>
+    <!-- Config Jquery & Pjax -->
+    <script src="js/jquery.min.js" async></script>
+    <script src="js/jquery.pjax.js" async></script>
+    <!-- End Config Jquery & Pjax -->
+
+    <script src="js/app.js" async></script>
+    <script src="js/nprogress.js" async></script>
+    <script src="js/components/header.js" async></script>
 </body>
 
 </html>
