--- a/pages/status.html
+++ b/pages/status.html
@@ -1,111 +1,127 @@
 <!DOCTYPE html>
 <html lang="fa">
+
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="#66BB6A">
+    <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" type="image/x-icon" href="https://covido.info/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>کویدو | سلامتی و اطلاع رسانی</title>
-    <link href="assets/css/style-status.css" rel="stylesheet"/>
-    <script async src="assets/js/nprogress.js"></script>
+    <title>گزارشات | کویدو - سامانه آگاه سازی و سلامتی</title>
+    <meta name="keywords" content="کویدو, کرونا, کروناویروس, سامانه, اطلاع رسانی">
+    <meta name="description"
+        content="سامانه اطلاع رسانی و آگاه سازی در زمینه کروناویروس ها و سایر همه گیری ها و بیماری ها">
+    <meta property="og:title" content="گزارشات | کویدو - سامانه آگاه سازی و سلامتی">
+    <meta property="og:description"
+        content="سامانه اطلاع رسانی و آگاه سازی در زمینه کروناویروس ها و سایر همه گیری ها و بیماری ها">
+    <meta property="og:image" content="https://covido.info/covido.png">
+    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="css/nprogress.css">
+    <link rel="stylesheet" href="css/components/home.css">
+    <link rel="stylesheet" href="css/components/header.css">
+    <script src="js/nprogress.js"></script>
 </head>
+
 <body>
 
-<script>
-    NProgress.start();
-</script>
+    <script>
+        NProgress.start();
+    </script>
 
-<header class="main-header">
-    <div class="navbar">
-        <div class="item">
-            <a href="#back">
-                <i class="icon-arrow"></i>
-            </a>
+    <header class="main-header">
+        <div class="navbar">
+            <div class="item">
+                <a href="#back">
+                    <i class="icon-arrow"></i>
+                </a>
+            </div>
+            <div class="item">
+                <h1>
+                    آمار و گزارشات
+                </h1>
+            </div>
+            <div class="item">
+                <a href="javascript:openModal()">
+                    <div class="change">
+                        <i class="icon-location"></i>
+                        موقعیت: <span> ایران</span>
+                    </div>
+                    <div class="flag-container">
+                        <div class="flag"></div>
+                    </div>
+                </a>
+
+            </div>
         </div>
-        <div class="item">
-            <h1>
-                آمار  و گزارشات
-            </h1>
+        <div class="map-container">
+            <img class="map" src="/assets/image/Map.svg" loading="lazy" />
         </div>
-        <div class="item">
-            <a href="javascript:openModal()">
-                <div class="change">
-                    <i class="icon-location"></i>
-                    موقعیت: <span> ایران</span>
+    </header>
+
+    <main>
+        <section class="container">
+            <div class="header">
+                <h6>جزئیات</h6>
+            </div>
+            <div class="content">
+                <div class="item">
+                    <h3>777,444,555</h3>
+                    <span>کل مبتلایان</span>
                 </div>
-                <div class="flag-container">
-                    <div class="flag"></div>
+                <div class="item">
+                    <h3>777,444,555</h3>
+                    <span class="green">بهبود یافتگان</span>
                 </div>
-            </a>
-            
+                <div class="item">
+                    <h3>777,444,555</h3>
+                    <span>مرگ و میر</span>
+                </div>
+            </div>
+
+        </section>
+        <div class="float-container">
+            <div class="content">
+                <div class="item">
+                    <h3>777,444,555</h3>
+                    <span>موردهای های فعال</span>
+                </div>
+                <div class="line"></div>
+                <div class="item">
+                    <h3>777,444,555</h3>
+                    <span>مورد های بسته</span>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <div class="modal">
+        <div class="modal-box">
+            <div class="modal-header">
+                <span class="close">&times;</span>
+                <h1>انتخاب موقعیت</h1>
+            </div>
+            <div class="modal-content">
+                <form>
+                    <div class="custom-select">
+                        <select>
+                            <option value="0">کشور مورد نظر:</option>
+                            <option value="1">جهان</option>
+                            <option value="2">جمهوری اسلامی ایران</option>
+                        </select>
+                    </div>
+                    <button type="submit">ثبت و ادامه</button>
+                </form>
+            </div>
         </div>
     </div>
-    <div class="map-container">
-        <img class="map" src="/assets/image/Map.svg" loading="lazy"/>
-    </div>
-</header>
 
-<main>
-    <section class="container">
-        <div class="header">
-            <h6>جزئیات</h6>
-        </div>
-        <div class="content">
-            <div class="item">
-                <h3>777,444,555</h3>
-                <span>کل مبتلایان</span>
-            </div>
-            <div class="item">
-                <h3>777,444,555</h3>
-                <span class="green">بهبود یافتگان</span>
-            </div>
-            <div class="item">
-                <h3>777,444,555</h3>
-                <span>مرگ و میر</span>
-            </div>
-        </div>
-        
-    </section>
-    <div class="float-container">
-        <div class="content">
-            <div class="item">
-                <h3>777,444,555</h3>
-                <span>موردهای های فعال</span>
-            </div>
-            <div class="line"></div>
-            <div class="item">
-                <h3>777,444,555</h3>
-                <span>مورد های بسته</span>
-            </div>
-        </div>
-    </div>
-</main>
+    <script>
+        NProgress.done();
+    </script>
 
-<div class="modal">
-    <div class="modal-box">
-        <div class="modal-header">
-            <span class="close">&times;</span>
-            <h1>انتخاب موقعیت</h1>
-        </div>
-        <div class="modal-content">
-            <form>
-                <div class="custom-select">
-                    <select>
-                      <option value="0">کشور مورد نظر:</option>
-                      <option value="1">جهان</option>
-                      <option value="2">جمهوری اسلامی ایران</option>
-                    </select>
-                  </div>
-                  <button type="submit">ثبت و ادامه</button>
-            </form>
-        </div>
-    </div>
-</div>
-
-<script>
-    NProgress.done();
-</script>
-
-<script async src="/assets/js/status.js"></script>
+    <script async src="/assets/js/status.js"></script>
 
 </body>
+
 </html>
