--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#66BB6A">
     <meta name="robots" content="index, follow">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" type="image/x-icon" href="https://covido.info/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>خانه | کویدو - سامانه آگاه سازی و سلامتی</title>
     <meta name="keywords" content="کویدو, کرونا, کروناویروس, سامانه, اطلاع رسانی">
